--- a/src/main/resources/ViewController/CreateEditContact.fxml
+++ b/src/main/resources/ViewController/CreateEditContact.fxml
@@ -1,28 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.0" prefWidth="460.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.text.*?>
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="1.7976931348623157E308"
+            minHeight="-Infinity" minWidth="-Infinity" prefHeight="459.0" prefWidth="805.0"
+            xmlns="http://javafx.com/javafx/8" fx:controller="ViewController.CreateEditController">
     <center>
-        <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="285.0" prefWidth="461.0" BorderPane.alignment="CENTER">
+        <GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+                  minWidth="-Infinity" prefHeight="267.0" prefWidth="440.0" BorderPane.alignment="TOP_CENTER">
             <children>
                 <Label text="Vorname">
                     <padding>
                         <Insets left="10.0" />
                     </padding>
+                    <font>
+                        <Font name="System Bold" size="13.0"/>
+                    </font>
                 </Label>
                 <Label text="Nachname" GridPane.rowIndex="1">
                     <GridPane.margin>
                         <Insets left="10.0" />
                     </GridPane.margin>
+                    <font>
+                        <Font name="System Bold" size="13.0"/>
+                    </font>
                 </Label>
                 <Label text="Email-Adresse" GridPane.rowIndex="2">
                     <GridPane.margin>
                         <Insets left="10.0" />
                     </GridPane.margin>
+                    <font>
+                        <Font name="System Bold" size="13.0"/>
+                    </font>
                 </Label>
                 <TextField fx:id="FirstNameBox" GridPane.columnIndex="1">
                     <GridPane.margin>
@@ -43,30 +54,15 @@
                     <GridPane.margin>
                         <Insets left="10.0" />
                     </GridPane.margin>
+                    <font>
+                        <Font name="System Bold" size="13.0"/>
+                    </font>
                 </Label>
                 <DatePicker GridPane.columnIndex="1" GridPane.rowIndex="3">
                     <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                     </GridPane.margin>
                 </DatePicker>
-                <Button fx:id="addPhoneButtonClick" alignment="CENTER" mnemonicParsing="false" text="Telefonnummer hinzufügen" GridPane.columnIndex="1" GridPane.rowIndex="5">
-                    <GridPane.margin>
-                        <Insets left="10.0" />
-                    </GridPane.margin>
-                </Button>
-                <Label text="Telefonnummern" GridPane.rowIndex="4">
-                    <GridPane.margin>
-                        <Insets left="10.0" />
-                    </GridPane.margin>
-                </Label><GridPane fx:id="PhoneNumberGrid" GridPane.columnIndex="1" GridPane.rowIndex="4">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-</GridPane>
             </children>
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="168.0" minWidth="10.0" prefWidth="107.0" />
@@ -77,14 +73,12 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             </rowConstraints>
         </GridPane>
     </center>
     <bottom>
-        <HBox prefHeight="39.0" prefWidth="460.0" spacing="10.0" BorderPane.alignment="CENTER">
-            <children>
+        <HBox prefHeight="38.0" prefWidth="602.0" spacing="10.0" BorderPane.alignment="CENTER">
+        <children>
                 <Button mnemonicParsing="false" onAction="#SaveNewContactClick" text="Speichern" />
                 <Button mnemonicParsing="false" onAction="#CancelModalClick" text="Abbrechen" />
             </children>
@@ -93,4 +87,61 @@
             </padding>
         </HBox>
     </bottom>
+    <right>
+        <VBox alignment="BOTTOM_CENTER" prefHeight="421.0" prefWidth="294.0" BorderPane.alignment="CENTER">
+            <children>
+                <Label text="Telefonnummern">
+                    <font>
+                        <Font name="System Bold" size="13.0"/>
+                    </font>
+                    <VBox.margin>
+                        <Insets bottom="5.0" top="10.0"/>
+                    </VBox.margin>
+                </Label>
+                <ScrollPane prefHeight="232.0" prefWidth="234.0" VBox.vgrow="ALWAYS">
+                    <content>
+                        <AnchorPane prefHeight="356.0" prefWidth="291.0">
+                            <children>
+                                <VBox fx:id="PhoneNumberVBox" alignment="TOP_CENTER" prefHeight="230.0"
+                                      prefWidth="211.0" spacing="10.0" AnchorPane.bottomAnchor="0.0"
+                                      AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+                                      AnchorPane.topAnchor="0.0" VBox.vgrow="ALWAYS">
+                                    <opaqueInsets>
+                                        <Insets/>
+                                    </opaqueInsets>
+                                </VBox>
+                            </children>
+                            <padding>
+                                <Insets bottom="10.0" left="10.0" top="10.0"/>
+                            </padding>
+                            <opaqueInsets>
+                                <Insets bottom="10.0" top="10.0"/>
+                            </opaqueInsets>
+                        </AnchorPane>
+                    </content>
+                </ScrollPane>
+                <HBox alignment="CENTER" prefHeight="36.0" prefWidth="294.0">
+                    <children>
+                        <Button alignment="BOTTOM_CENTER" mnemonicParsing="false" onAction="#addPhoneButtonClick"
+                                text="Hinzufügen">
+                            <HBox.margin>
+                                <Insets left="10.0"/>
+                            </HBox.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" text="Entfernen">
+                            <HBox.margin>
+                                <Insets left="10.0"/>
+                            </HBox.margin>
+                        </Button>
+                    </children>
+                </HBox>
+            </children>
+            <opaqueInsets>
+                <Insets/>
+            </opaqueInsets>
+            <BorderPane.margin>
+                <Insets right="10.0"/>
+            </BorderPane.margin>
+        </VBox>
+    </right>
 </BorderPane>
