--- a/src/main/resources/MainView.fxml
+++ b/src/main/resources/MainView.fxml
@@ -4,8 +4,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.input.*?>
 <?import javafx.scene.layout.*?>
-<GridPane alignment="center" hgap="10" prefHeight="432.0" prefWidth="519.0" vgap="10" xmlns="http://javafx.com/javafx/8"
-          xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewController.MainController">
+<GridPane xmlns:fx="http://javafx.com/fxml/1" alignment="center" hgap="10" prefHeight="432.0" prefWidth="519.0"
+          vgap="10" xmlns="http://javafx.com/javafx/8" fx:controller="ViewController.MainController">
     <columnConstraints>
         <ColumnConstraints/>
     </columnConstraints>
@@ -13,7 +13,7 @@
         <RowConstraints/>
     </rowConstraints>
     <children>
-        <BorderPane GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" prefHeight="200.0" prefWidth="200.0">
+        <BorderPane prefHeight="200.0" prefWidth="200.0" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
             <top>
                 <MenuBar BorderPane.alignment="CENTER">
                     <menus>
@@ -41,7 +41,7 @@
                                 </MenuItem>
                             </items>
                         </Menu>
-                        <Menu mnemonicParsing="false" text="Kontakte">
+                        <Menu fx:id="ContactMenu" disable="true" mnemonicParsing="false" text="Kontakte">
                             <items>
                                 <MenuItem mnemonicParsing="false" onAction="#CreateContactClick" text="Neuer Kontakt">
                                     <accelerator>
@@ -106,9 +106,10 @@
                         <HBox alignment="CENTER_LEFT" maxWidth="1.7976931348623157E308" prefHeight="30.0"
                               spacing="10.0">
                             <children>
-                                <Button mnemonicParsing="false" onAction="#SearchButtonClick" prefWidth="100.0"
-                                        text="Suche" fx:id="SearchButton"/>
-                                <TextField maxWidth="1.7976931348623157E308" prefWidth="450.0" fx:id="SearchBox">
+                                <Button fx:id="SearchButton" mnemonicParsing="false" onAction="#SearchButtonClick"
+                                        prefWidth="100.0" text="Suche"/>
+                                <TextField fx:id="SearchBox" maxWidth="1.7976931348623157E308"
+                                           onKeyPressed="#SearchBoxKeyDown" prefWidth="450.0">
                                     <HBox.margin>
                                         <Insets right="10.0"/>
                                     </HBox.margin>
@@ -120,7 +121,7 @@
                         </HBox>
                         <HBox VBox.vgrow="ALWAYS">
                             <children>
-                                <TableView HBox.hgrow="ALWAYS">
+                                <TableView fx:id="ContactTable" HBox.hgrow="ALWAYS">
                                     <columns>
                                         <TableColumn prefWidth="85.0" text="Vorname"/>
                                         <TableColumn prefWidth="100.0" text="Nachname"/>
@@ -131,7 +132,7 @@
                                         <Insets/>
                                     </HBox.margin>
                                 </TableView>
-                                <GridPane HBox.hgrow="ALWAYS" maxWidth="250.0" prefWidth="250.0">
+                                <GridPane maxWidth="250.0" prefWidth="250.0" HBox.hgrow="ALWAYS">
                                     <columnConstraints>
                                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
                                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
