--- a/src/main/resources/ViewController/CreateEditContact.fxml
+++ b/src/main/resources/ViewController/CreateEditContact.fxml
@@ -58,7 +58,7 @@
                         <Font name="System Bold" size="13.0"/>
                     </font>
                 </Label>
-                <DatePicker GridPane.columnIndex="1" GridPane.rowIndex="3">
+                <DatePicker fx:id="BirthdayDatePicker" GridPane.columnIndex="1" GridPane.rowIndex="3">
                     <GridPane.margin>
                         <Insets left="10.0" right="10.0"/>
                     </GridPane.margin>
@@ -128,7 +128,7 @@
                                 <Insets left="10.0"/>
                             </HBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" text="Entfernen">
+                        <Button mnemonicParsing="false" onAction="#RemovePhoneNumber" text="Entfernen">
                             <HBox.margin>
                                 <Insets left="10.0"/>
                             </HBox.margin>
