--- a/src/main/resources/MainView.fxml
+++ b/src/main/resources/MainView.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.input.*?>
 <?import javafx.scene.layout.*?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" alignment="center" hgap="10" prefHeight="432.0" prefWidth="519.0"
+<GridPane xmlns:fx="http://javafx.com/fxml/1" alignment="center" hgap="10" prefHeight="547.0" prefWidth="690.0"
           vgap="10" xmlns="http://javafx.com/javafx/8" fx:controller="ViewController.MainController">
     <columnConstraints>
         <ColumnConstraints/>
@@ -123,28 +123,26 @@
                             <children>
                                 <TableView fx:id="ContactTable" HBox.hgrow="ALWAYS">
                                     <columns>
-                                        <TableColumn prefWidth="85.0" text="Vorname"/>
-                                        <TableColumn prefWidth="100.0" text="Nachname"/>
-                                        <TableColumn prefWidth="75.0" text="Email"/>
-                                        <TableColumn prefWidth="75.0" text="Handy"/>
+                                        <TableColumn fx:id="FirstNameColumn" editable="false" prefWidth="96.0"
+                                                     text="Vorname"/>
+                                        <TableColumn fx:id="LastNameColumn" editable="false" prefWidth="100.0"
+                                                     text="Nachname"/>
+                                        <TableColumn fx:id="EmailAddressColumn" editable="false" prefWidth="154.0"
+                                                     text="Email"/>
+                                        <TableColumn fx:id="BirthdayColumn" editable="false" prefWidth="119.0"
+                                                     text="Geburtstag"/>
+                                        <TableColumn prefWidth="250.0" text="Telefonnummern">
+                                            <columns>
+                                                <TableColumn fx:id="HomeNrColumn" prefWidth="75.0" text="Festnetz"/>
+                                                <TableColumn fx:id="MobileNrColumn" prefWidth="75.0" text="Mobil"/>
+                                                <TableColumn fx:id="WorkNrColumn" prefWidth="75.0" text="Arbeit"/>
+                                            </columns>
+                                        </TableColumn>
                                     </columns>
                                     <HBox.margin>
                                         <Insets/>
                                     </HBox.margin>
                                 </TableView>
-                                <GridPane maxWidth="250.0" prefWidth="250.0" HBox.hgrow="ALWAYS">
-                                    <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                                    </columnConstraints>
-                                    <rowConstraints>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                                    </rowConstraints>
-                                </GridPane>
                             </children>
                         </HBox>
                     </children>
