--- a/src/main/resources/css/syntaxHighlighter/shCoreMidnight.css
+++ b/src/main/resources/css/syntaxHighlighter/shCoreMidnight.css
@@ -270,27 +270,27 @@
 }
 
 .syntaxhighlighter {
-    background-color: #1b2426 !important;
+    background-color: #0f192a !important;
 }
 
 .syntaxhighlighter .line.alt1 {
-    background-color: #1b2426 !important;
+    background-color: #0f192a !important;
 }
 
 .syntaxhighlighter .line.alt2 {
-    background-color: #1b2426 !important;
+    background-color: #0f192a !important;
 }
 
 .syntaxhighlighter .line.highlighted.alt1, .syntaxhighlighter .line.highlighted.alt2 {
-    background-color: #323e41 !important;
+    background-color: #253e5a !important;
 }
 
 .syntaxhighlighter .line.highlighted.number {
-    color: #b9bdb6 !important;
+    color: #38566f !important;
 }
 
 .syntaxhighlighter table caption {
-    color: #b9bdb6 !important;
+    color: #d1edff !important;
 }
 
 .syntaxhighlighter .gutter {
@@ -303,7 +303,7 @@
 
 .syntaxhighlighter .gutter .line.highlighted {
     background-color: #435a5f !important;
-    color: #1b2426 !important;
+    color: #0f192a !important;
 }
 
 .syntaxhighlighter.printing .line .content {
@@ -315,51 +315,51 @@
 }
 
 .syntaxhighlighter.collapsed .toolbar {
-    color: #5ba1cf !important;
+    color: #428bdd !important;
     background: black !important;
     border: 1px solid #435a5f !important;
 }
 
 .syntaxhighlighter.collapsed .toolbar a {
-    color: #5ba1cf !important;
+    color: #428bdd !important;
 }
 
 .syntaxhighlighter.collapsed .toolbar a:hover {
-    color: #5ce638 !important;
+    color: #1dc116 !important;
 }
 
 .syntaxhighlighter .toolbar {
-    color: white !important;
+    color: #d1edff !important;
     background: #435a5f !important;
     border: none !important;
 }
 
 .syntaxhighlighter .toolbar a {
-    color: white !important;
+    color: #d1edff !important;
 }
 
 .syntaxhighlighter .toolbar a:hover {
-    color: #e0e8ff !important;
+    color: #8aa6c1 !important;
 }
 
 .syntaxhighlighter .plain, .syntaxhighlighter .plain a {
-    color: #b9bdb6 !important;
+    color: #d1edff !important;
 }
 
 .syntaxhighlighter .comments, .syntaxhighlighter .comments a {
-    color: #878a85 !important;
+    color: #428bdd !important;
 }
 
 .syntaxhighlighter .string, .syntaxhighlighter .string a {
-    color: #5ce638 !important;
+    color: #1dc116 !important;
 }
 
 .syntaxhighlighter .keyword {
-    color: #5ba1cf !important;
+    color: #b43d3d !important;
 }
 
 .syntaxhighlighter .preprocessor {
-    color: #435a5f !important;
+    color: #8aa6c1 !important;
 }
 
 .syntaxhighlighter .variable {
@@ -367,7 +367,7 @@
 }
 
 .syntaxhighlighter .value {
-    color: #009900 !important;
+    color: #f7e741 !important;
 }
 
 .syntaxhighlighter .functions {
@@ -380,12 +380,12 @@
 
 .syntaxhighlighter .script {
     font-weight: bold !important;
-    color: #5ba1cf !important;
+    color: #b43d3d !important;
     background-color: none !important;
 }
 
 .syntaxhighlighter .color1, .syntaxhighlighter .color1 a {
-    color: #e0e8ff !important;
+    color: #f8bb00 !important;
 }
 
 .syntaxhighlighter .color2, .syntaxhighlighter .color2 a {
